Update bindings for jigsaw-0.9.13.xx
- Flake8-ification...

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-ignore = W503,W504,E115,E265,E271,E701,E702,E704
+ignore = W503,W504,E115,E265,E271,E701,E702,E704,F401
 exclude = jigsawpy/msh_l.py,
           jigsawpy/jig_l.py
