--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,8 @@ script:
   - python3 example.py --IDnumber=1
   - python3 example.py --IDnumber=2
   - python3 example.py --IDnumber=3
+  - python3 example.py --IDnumber=4
+  - python3 example.py --IDnumber=5
+  - python3 example.py --IDnumber=6
+  - python3 example.py --IDnumber=7
+  - python3 example.py --IDnumber=8
