--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
 script:
   - export CC=gcc-8
   - export CXX=g++-8
-  - python3 -m pip3 install --user numpy scipy
+  - python3 -m pip install --user numpy scipy
   - python3 setup.py build_external
   - python3 setup.py install
   - python3 example.py --IDnumber=0
