--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - 3.6
   - 3.7
   - 3.8
   - 3.9
@@ -17,7 +16,7 @@ addons:
 script:
   - export CC=gcc-8
   - export CXX=g++-8
-  - python3 -m pip install --user numpy scipy
+  - python3 -m pip install numpy scipy
   - python3 setup.py build_external
   - python3 setup.py install
   - python3 example.py --IDnumber=0
