--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 script:
   - export CC=gcc-8
   - export CXX=g++-8
-  - python3 -m pip install numpy scipy
+  - python3 -m pip install --force-reinstall numpy scipy
   - python3 setup.py build_external
   - python3 setup.py install
   - python3 example.py --IDnumber=0
