--- a/external/jigsaw/src/CMakeLists.txt
+++ b/external/jigsaw/src/CMakeLists.txt
@@ -25,7 +25,7 @@ if (DEFINED MSVC_LIKE)
 endif ()
 
 if (DEFINED GCXX_LIKE)
-  add_compile_options (-pedantic -Wall -pthread)
+  add_compile_options (-pedantic -Wall -pthread -fopenmp)
 endif ()
 
 if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
