--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -27,20 +27,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Install dependencies on win
-        if: startsWith(matrix.config.os, 'windows')
+        if: startsWith(matrix.os, 'windows')
         run: |
           choco install ninja cmake
           ninja --version
           cmake --version
           
       - name: Install dependencies on unx
-        if: startsWith(matrix.config.name, 'ubuntu')
+        if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
           sudo apt-get install ninja-build cmake
@@ -49,12 +44,17 @@ jobs:
           g++ --version
           
       - name: Install dependencies on osx
-        if: startsWith(matrix.config.os, 'macos')
+        if: startsWith(matrix.os, 'macos')
         run: |
           brew install ninja cmake llvm libomp
           ninja --version
           cmake --version
           clang++ --version
+          
+      - name: Install dependencies -- all
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build jigsaw-python
         run: python setup.py build_external install
