add wildcards to include

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ packages = [
     { include = "jigsawpy" },
 ]
 include = [
-    { path = "jigsawpy/_lib", format = "wheel" },
-    { path = "jigsawpy/_bin", format = "wheel" },
+    { path = "jigsawpy/_lib/*", format = "wheel" },
+    { path = "jigsawpy/_bin/*", format = "wheel" },
     "external/**/*",
 ]
 
