--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.10"
-numpy = "^1.25.2"
+numpy = ">=1.25.2,<3"
 scipy = "^1.11.1"
 
 [build-system]
